--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <option value="Centro">Centro</option>
                             <option value="Plaza">Plaza</option>
                             <option value="Terminal">Terminal</option>
-                            <option value="Comercial">Comercial</option>
+                            <option value="Shopping">Shopping</option>
                         </select>
                     </div>
 
